Update the slides

--- a/cours6/index.Rmd
+++ b/cours6/index.Rmd
@@ -473,7 +473,7 @@ dev.copy2eps(file = "test.eps")
 
 # Installation
 
-```{r}
+```{r eval=FALSE}
 install.packages("igraph")
 library(igraph)
 ```
@@ -512,7 +512,7 @@ plot(g)
 
 *** =left
 ```{r, eval = FALSE}
-plot(g, vertex.label=NA, edge.arrow.mode = 0, 
+plot(g, vertex.label=NA, edge.arrow.mode = 0,
     vertex.frame.color = NA)
 ```
 
@@ -545,7 +545,7 @@ col.vec <- heat.colors(S)
 V(g)$color = col.vec[rk]
 
 # Refaire la figure
-plot(g, vertex.label=NA, edge.arrow.mode = 0, 
+plot(g, vertex.label=NA, edge.arrow.mode = 0,
     vertex.frame.color = NA)
 ```
 
@@ -580,7 +580,7 @@ col.vec <- seq(10, 25, length.out = S)
 V(g)$size = col.vec[rk]
 
 # Refaire la figure
-plot(g, vertex.label=NA, edge.arrow.mode = 0, 
+plot(g, vertex.label=NA, edge.arrow.mode = 0,
     vertex.frame.color = NA)
 ```
 
@@ -602,7 +602,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0, vertex.frame.color = NA)
 
 *** =left
 ```{r, eval = FALSE}
-plot(g, vertex.label=NA, edge.arrow.mode = 0, 
+plot(g, vertex.label=NA, edge.arrow.mode = 0,
     vertex.frame.color = NA, layout = layout.reingold.tilford(g))
 ```
 
@@ -617,8 +617,8 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0, vertex.frame.color = NA, layout = 
 
 *** =left
 ```{r, eval = FALSE}
-plot(g, vertex.label=NA, edge.arrow.mode = 0, 
-    vertex.frame.color = NA, 
+plot(g, vertex.label=NA, edge.arrow.mode = 0,
+    vertex.frame.color = NA,
     layout = layout.circle(g))
 ```
 
@@ -633,8 +633,8 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0, vertex.frame.color = NA, layout = 
 
 *** =left
 ```{r, eval = FALSE}
-plot(g, vertex.label=NA, edge.arrow.mode = 0, 
-    vertex.frame.color = NA, 
+plot(g, vertex.label=NA, edge.arrow.mode = 0,
+    vertex.frame.color = NA,
     layout = layout.kamada.kawai(g))
 ```
 
@@ -737,7 +737,8 @@ writeLines(iris_tex, con = "./donnees/iris.tex", sep = "\n", useBytes = FALSE)
 - Respect de normes graphiques
 - Originalité
 
------- .transition
+---
+--- .transition
 
 # Essai
 
